objects/ProgramEnrollment.object
<CustomObject>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                    <label>Different Preferred Language</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn&apos;t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
                <value>
                    <fullName>171</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>367</fullName>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousStreetESSH__c</fullName>
        <description>3.917.2C</description>
        <label>Previous Street ESSH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrisonDischarge__c</fullName>
        <label>Prison Discharge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Text(Program.hmisProjectType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonNoServices__c</fullName>
        <label>Reason No Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReason_No_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonNotEnrolled__c</fullName>
        <label>Reason Not Enrolled in PATH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotEnrolled</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReferralSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelationshipToHoH__c</fullName>
        <defaultValue>&quot;99&quot;</defaultValue>
        <label>Relationship to HoH</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisRelationshipToHoH</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RentalSubsidyType__c</fullName>
        <label>Rental Subsidy Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LivingSituation__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisRentalSubsidyTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RunawayYouth__c</fullName>
        <label>Runaway Youth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SexOffender__c</fullName>
        <label>Sex Offender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SexualOrientationOther__c</fullName>
        <label>Sexual Orientation Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SexualOrientation__c</fullName>
        <label>Sexual Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisSexual_Orientation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SingleParent__c</fullName>
        <label>Single Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsidyAtRisk__c</fullName>
        <label>Subsidy at Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetScreenReqd__c</fullName>
        <label>Target Screen Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThresholdScore__c</fullName>
        <label>Threshold Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeToHousingLoss__c</fullName>
        <label>Time to Housing Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>1-6 days</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>7-13 days</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>14-21 days</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>More than 21 days</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimesHomelessPastThreeYears__c</fullName>
        <label>Times Homeless Past 3 Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisTimesHomelessPastThreeYears</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TranslationNeeded__c</fullName>
        <label>Translation Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnemploymentFam__c</fullName>
        <label>Unemployment Fam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAMCStation__c</fullName>
        <label>VAMC Station</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisVAMCStationNumber</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisDisabling_Condition__c</fullName>
        <defaultValue>&quot;99&quot;</defaultValue>
        <inlineHelpText>Disabling Condition may either be entered by the HMIS end user independently of any other special need field, or data in this field may be inferred by the responses to “ability to live independently” for 4.05 Physical Disability, 4.07 Chronic Health Condition, 4.09 Mental Health Disorder, or 4.10 Substance Use Disorder or an answer of “Yes” to 4.06 Developmental Disability or 4.08 HIV/AIDS.</inlineHelpText>
        <label>Disabling Condition</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>HMISEnrollmentType</fullName>
        <active>true</active>
        <description>HMIS Housing Data</description>
        <label>HMIS Enrollment Type</label>
    </recordTypes>
</CustomObject>